--- a/app/styles/sidebar/sidebar.module.css
+++ b/app/styles/sidebar/sidebar.module.css
@@ -1,6 +1,7 @@
 .container{
   position: sticky;
   top: 40px;
+  background-color: #ff7211;
 }
 
 .user{
@@ -55,5 +56,5 @@
 }
 
 .logout:hover{
-  background-color: #2e374a;
+  background-color: #ff7211;
 }
