--- a/app/globals.css
+++ b/app/globals.css
@@ -6,9 +6,9 @@
 
 
 :root {
-  --bg: #151c2c;
-  --bgSoft: #1b9392;
-  --text: white;
+  --bg: #ffffff;
+  --bgSoft: #ff7211;
+  --text: #000000;
   --textSoft: #b7bac1;
 }
 
