--- a/app/styles/sidebar/menuLink/menuLink.module.css
+++ b/app/styles/sidebar/menuLink/menuLink.module.css
@@ -1,15 +1,24 @@
+/* Default menu item */
 .container {
-  padding: 20px;
   display: flex;
   align-items: center;
-  gap: 10px;
-  margin: 5px 0px;
-  border-radius: 10px;
-
-
+  gap: 30px;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+  border-radius: 5px;
+  transition: background 0.3s ease;
 }
 
-.container:hover,
+/* Highlight active menu item */
 .active {
-  background-color: #2e374a;
+  background-color: #ff7211;
+  border-radius: 6px;
+}
+
+/* Add a rectangle around the active icon */
+.activeIcon {
+  /*background-color: rgb(18, 18, 18);*/
+  padding: 8px;
+  border-radius: 4px;
 }
