--- a/app/styles/card/card.module.css
+++ b/app/styles/card/card.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--bgSoft);
+  background-color:#ff7211;
   padding: 20px;
   border-radius: 10px;
   display: flex;
@@ -7,9 +7,24 @@
   cursor: pointer;
   width: 100%;
 }
+.cardContainer {
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+/*.container {*/
+/*  background: #f8f9fa;*/
+/*  padding: 20px;*/
+/*  border-radius: 8px;*/
+/*  text-align: center;*/
+/*  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
+/*  width: 200px;*/
+/*}*/
 
 .container:hover{
-  background-color: #2e374a;
+  background-color: #000000;
 }
 
 .texts {
@@ -18,9 +33,13 @@
   gap: 20px;
 }
 
+.title{
+  color: white;
+}
 .number {
   font-size: 24px;
   font-weight: 500;
+  color: white;
 }
 
 .detail {
@@ -34,4 +53,20 @@
 
 .negative {
   color: red;
+}
+/* Assign different colors */
+.color1 {
+  background-color: #ff7211;
+}
+
+.color2 {
+  background-color: #1b9392;
+}
+
+.color3 {
+  background-color: #000000;
+}
+
+.color4 {
+  background-color: #ff7211;
 }
