--- a/app/styles/chart/chart.module.css
+++ b/app/styles/chart/chart.module.css
@@ -1,8 +1,9 @@
 .container {
   height: 450px;
-  background-color: var(--bgSoft);
+  background-color: #f3f3f3;
   padding: 20px;
   border-radius: 10px;
+  margin-top: 30px;
 }
 
 .title{
