--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -1,23 +1,53 @@
 .container {
-    display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0;
+  margin-top: 0;
+  /*width: 100%;*/
   /*background-color: var(--bgSoft);*/
   }
   
   .menu {
-    flex: 1;
+    /*flex: auto;*/
     min-height: 100vh;
     /*background-color: var(--bgSoft);*/
+    /*justify-content:*/
+    padding: 0 0;
   }
   
   .content {
-    flex: 4;
-    padding: 20px;
+    flex: 2;
+    /*padding: 20px;*/
+
+    margin-right: 20px;
+
+
   }
-  
+  .contents{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /*grid-template-rows: repeat(2, auto); */
+    gap: 50px;
+    /*width: 100%;*/
+    margin-top: 20px;
+    /*align-items: start;*/
+  }
+  .calendars{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /*grid-template-rows: repeat(2, auto); */
+    gap: 100px; /* Space between items */
+    /*width: 100%;*/
+    margin-top: 20px;
+    /*align-items: start;*/
+
+  }
   .wrapper {
     display: flex;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
+    /*margin-left: 120px;*/
+    margin-right: auto;
   }
   
   .main {
@@ -32,9 +62,51 @@
     gap: 20px;
     justify-content: space-between;
   }
-  
+  .card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px; /* Space between cards */
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+
+  }
+  .containercard{
+    background-color: #c6e7e7;
+    padding: 20px;
+    border-radius: 20px;
+
+  }
+.containercards{
+  background-color: #c6e7e7;
+  padding: 20px;
+  border-radius: 20px;
+  height: 300px;
+  width: 500px;
+}
   .side {
     flex: 1;
 
   }
-  
+.calendarContainer {
+  margin-top: 20px;
+  padding: 10px;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.react-calendar {
+  width: 100%;
+  max-width: 350px;
+  background: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+}
+.text{
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
