--- a/app/styles/navbar/navbar.module.css
+++ b/app/styles/navbar/navbar.module.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
   background-color: white; /* Ensure navbar has a background */
 }
 
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  width: 100%;
 }
 
 .search {
@@ -27,6 +28,7 @@
   background-color: #c6e7e7;
   padding: 1px 30px;
   border-radius: 25px;
+  justify-content: start;
 }
 
 .input {
@@ -42,6 +44,8 @@
   display: flex;
   align-items: center;
   gap: 15px;
+  justify-content: end;
+  margin-left: auto;
 }
 
 .user {
