--- a/app/styles/chart/chart.module.css
+++ b/app/styles/chart/chart.module.css
@@ -1,13 +1,16 @@
 .container {
-  height: 450px;
+  height: 200px;
   background-color: #f3f3f3;
   padding: 20px;
   border-radius: 10px;
-  margin-top: 30px;
+  /*margin-top: 30px;*/
+  width: 350px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
 }
 
 .title{
   font-weight: 200;
   color: var(--textSoft);
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
