--- a/app/styles/sidebar/sidebar.module.css
+++ b/app/styles/sidebar/sidebar.module.css
@@ -3,7 +3,7 @@
   top: 0;
   background-color: #1b9392;
   width: 250px;
-  height: 100%;
+  height: 100vh;
   padding: 20px;
   overflow-y: auto;
 }
