--- a/app/styles/calendar/calendar.module.css
+++ b/app/styles/calendar/calendar.module.css
@@ -5,11 +5,15 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 400px;
+    width: 500px;  /* Adjust as needed */
+    max-width: 100%;
 }
 
-.calendarTitle {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
+.calendar {
+    width: 550px;
+    max-width: 100%;
+    background: white;
+    border: 1px solid #a0a096;
+    font-family: 'Arial', 'Helvetica', sans-serif;
+    line-height: 1.125em;
 }
