--- a/app/styles/components/add/addComponent.module.css
+++ b/app/styles/components/add/addComponent.module.css
@@ -1,9 +1,10 @@
-  .container {
+.container {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: 100%;
+  max-width: 600px; /* Adjust for desired popup width */
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -11,7 +12,8 @@
   z-index: 1000;
   padding: 20px;
   border-radius: 10px;
- }
+}
+
 
 
 .form {
