--- a/app/styles/cohorts/addCohort/addCohort.module.css
+++ b/app/styles/cohorts/addCohort/addCohort.module.css
@@ -9,6 +9,9 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   position: relative;
   margin-left: 250px;
+
+  /* Semi-transparent background */
+
 }
 
 .closeButton {
@@ -30,7 +33,7 @@
 }
 
 .formGroup {
-  width: 45%; /* Creates a two-column layout */
+  width: 45%;
   display: flex;
   flex-direction: column;
 }
@@ -152,3 +155,51 @@ font-size: 20px;
 .addFacilitatorRoleButton:hover {
   background-color: #ff7211;
 }
+
+
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  color:red;
+}
+
+.closeButtons {
+  position:absolute;
+  top: 20px;
+  right: 20px;
+  background: none;
+  border: none;
+  font-size: 90px;
+  cursor: pointer;
+  color:red;
+
+}
+/*//MODAL*/
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px); /* Blurs background */
+  z-index: 1000;
+}
+
+.modalContent {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 1001;
+}
+
