--- a/app/styles/students/addStudent/addStudent.module.css
+++ b/app/styles/students/addStudent/addStudent.module.css
@@ -17,7 +17,7 @@
   padding: 20px;
   background-color: var(--bg);
   color: var(--text);
-  border: 2px solid #2e374a;
+  border: 2px solid #1b9392;
   border-radius: 5px;
   margin-bottom: 30px;
 }
