--- a/app/styles/students/Student.module.css
+++ b/app/styles/students/Student.module.css
@@ -112,7 +112,7 @@
 }
 
 .table tbody tr:nth-child(even) {
-    background: #f3f4f6;
+    background: #7c7c7c;
 }
 
 .buttons {
@@ -152,4 +152,8 @@
     font-weight: 600;
     color: #c6e7e7;
     margin-top: 20px;
+}
+
+.search{
+    margin-top: -10px;
 }
