--- a/app/styles/chart/chart.module.css
+++ b/app/styles/chart/chart.module.css
@@ -3,14 +3,33 @@
   background-color: #f3f3f3;
   padding: 20px;
   border-radius: 10px;
-  /*margin-top: 30px;*/
   width: 350px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-
 }
 
-.title{
-  font-weight: 200;
-  color: var(--textSoft);
-  margin-bottom: 5px;
+/* Medium screens (tablets, 768px and below) */
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+    height: auto;
+    padding: 15px;
+  }
+
+  .title {
+    font-size: 18px;
+  }
+}
+
+/* Small screens (mobile devices, 480px and below) */
+@media (max-width: 480px) {
+  .container {
+    width: 95%;
+    padding: 10px;
+    height: auto;
+  }
+
+  .title {
+    font-size: 16px;
+    text-align: center;
+  }
 }
