--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -18,6 +18,7 @@
 .content {
   width: 100%;
   padding: 20px;
+  
   /*display: grid;*/
   /*grid-template-columns: repeat(2, 1fr);*/
 }
@@ -27,6 +28,7 @@
   display: flex;
   gap: 10px; /* Reduce space */
   margin-right: 0;
+  width:auto;
 }
 
 
