--- a/app/styles/footer/footer.module.css
+++ b/app/styles/footer/footer.module.css
@@ -1,9 +1,10 @@
-.container {
+.container1 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 30px;
-  color: var(--textSoft);
+  color: white;
+   background: linear-gradient(to left, #c2f3f3, #4fa9a9); 
 }
 
 .logo {
