--- a/app/styles/components/add/addComponent.module.css
+++ b/app/styles/components/add/addComponent.module.css
@@ -1,19 +1,37 @@
+
 .container {
   position: fixed;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 600px; /* Adjust for desired popup width */
-  background-color: rgba(0, 0, 0, 0.5);
+  max-width: 600px; 
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
   padding: 20px;
   border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); 
+  z-index: 999; 
+ }
+
+
+/* style for single component container */
+.container1{         
+  background-color: #1B9392;
+  padding: 20px;
+  border-radius: 20px;
+}
 
 
 .form {
@@ -25,7 +43,7 @@
   border: 1px solid #C6E7E7;
   border-radius: 20px;
   position:relative;
-  width:650px;
+  width:650px; 
 
 }
 
@@ -67,9 +85,10 @@
   text-transform: capitalize;
   color: var(--textSoft);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  
 
 }
+
+
 
 .divInput input,
 .divInput select {
@@ -126,15 +145,10 @@
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-}
+ }
 
-.historyButton {
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  background-color: teal;
-  color: var(--text);
-}
+ 
+
 .container {
   background-color: var(--bgSoft);
   margin-top: 20px;
@@ -154,14 +168,14 @@
   padding: 10px;
   border-radius: 10px;
   border: none;
-  background-color: teal;
-  color: var(--text);
+  background-color: #ff7211;
+  color: #ffffff;
 }
 
 .componentInfo p {
   margin-bottom: 10px;
   font-size: 16px;
-  color: var(--textSoft);
+  color: #ffffff;
 }
 
 .componentInfo p span {
@@ -174,8 +188,8 @@
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: teal;
-  color: var(--text);
+  background-color: #ff7211;
+  color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
