--- a/app/styles/condition/condition.module.css
+++ b/app/styles/condition/condition.module.css
@@ -68,7 +68,19 @@
      color: white;
    }
    
-   /* Add these styles to your viewLevel.module.css file */
+   /* Overlay */
+   .overlay{
+    position: fixed;
+    top: 1;
+    left: 1;
+    width: 650px;
+    height: 461px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 999; 
+    border-radius: 20px;
+    /* display: none;  */
+
+   }
    
    .popup {
      position: fixed;
@@ -76,7 +88,7 @@
      left: 0;
      width: 100%;
      height: 100%;
-     background-color: rgba(0, 0, 0, 0.5);
+     /* background-color: rgba(0, 0, 0, 0.5); */
      display: flex;
      justify-content: center;
      align-items: center;
@@ -137,22 +149,22 @@
    }
    
    .popupActions button[type="submit"] {
-     background-color: #4CAF50;
+     background-color: #1B9392;
      color: white;
      margin-right: 10px;
    }
    
    .popupActions button[type="submit"]:hover {
-     background-color: #45a049;
+     background-color: #136B6A;
    }
    
    .popupActions button[type="button"] {
-     background-color: #f44336;
+     background-color: #ff7211;
      color: white;
    }
    
    .popupActions button[type="button"]:hover {
-     background-color: #d32f2f;
+     background-color: #C6550D;
    }
 
 
