--- a/app/styles/borrow/add/borrowForm.module.css
+++ b/app/styles/borrow/add/borrowForm.module.css
@@ -1,7 +1,5 @@
- 
 
    .container {
-
     margin-top: 50px;
     position: fixed;
     top: 50%;
@@ -15,6 +13,15 @@
     border-radius: 10px;
   }
   
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Darkens the entire background */
+    z-index: 999; /* Ensures it stays behind the container */
+   }
  
 
   .form {
@@ -32,6 +39,7 @@
     margin-left: 100px;
     height: 90vh;
     padding-left: 35px;
+    padding-top: 40px;
    
   }
  
@@ -62,7 +70,9 @@
 
 .submit{
     width:97%;
-    padding:30px;
+    padding:20px;
+    padding-top: 12px;
+    padding-bottom: 33px;
     background-color: #ff7211;
     color:#ffffff;
     border-radius: 5px;
