--- a/app/styles/staff/staffComponent.module.css
+++ b/app/styles/staff/staffComponent.module.css
@@ -63,7 +63,7 @@
     height: 100%;
   }
   .todoCard{
-    background-color: #1b9392;;
+    background-color: #1b9392;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     padding: 24px;
