--- a/app/styles/borrow/singlepage/singlepage.module.css
+++ b/app/styles/borrow/singlepage/singlepage.module.css
@@ -1,7 +1,7 @@
 /* singlepage.module.css */
 
 .container {
-    background: var(--bgSoft);
+    background: #1B9392;
     margin: 20px auto;
     border-radius: 15px;
     padding: 30px;
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: row;
     gap: 40px;
+    /* background-color: #C6E7E7; */
   }
   
   .formSection {
@@ -21,6 +22,8 @@
     padding: 25px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #C6E7E7;
+
   }
   
   .formSection h2 {
@@ -84,7 +87,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    background-color: #3a80e9;
+    background-color: #1B9392;
     color: #fff;
     transition: background-color 0.3s ease;
   }
@@ -94,15 +97,15 @@
   }
   
   .actionButtons button:hover {
-    background-color: #306edb;
+    background-color: #15706F;
   }
   
   .actionButtons button:last-child {
-    background-color: #e93a3a;
+    background-color: #FF7211;
   }
   
   .actionButtons button:last-child:hover {
-    background-color: #d32c2c;
+    background-color: #CC5A0E;
   }
   
   .loader,
@@ -140,7 +143,7 @@
   
   .submitButton {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #1B9392;
     color: white;
     border: none;
     border-radius: 5px;
@@ -149,6 +152,6 @@
   }
   
   .submitButton:hover {
-    background-color: #0056b3;
+    background-color: #1B9392;
   }
   
